fixed Home user description covering icon
Former-commit-id: 23b90c765de9d719452a5270014b3ba922e1fcae

--- a/client/src/react-components/Home/styles.css
+++ b/client/src/react-components/Home/styles.css
@@ -36,11 +36,18 @@
 .user_type_icon_container{
     background: lightsteelblue;
     display: inline-block;
-    height: 200px;
+
     vertical-align: middle;
     line-height: 200px;
-    width: 85px;
-    text-align: center
+    width: 100px;
+    text-align: center;
+    float: left;
+}
+
+.user_description_container {
+    display: block;
+    height: 200px;
+    margin-left: 120px;
 }
 
 .fontsize {
